Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -69,6 +69,11 @@
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Vanilkový věneček</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
 <div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
