Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,101 +1,39 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><table >
-<tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
-<tr>
-<td>
-<div class="containerPriceList">
-<span class="line"></span>
-<h5>Středa, 15. 12. 2021</h5>
-<span class="line"></span>
-<p>
-<strong>❣️❣️❣️V období 20.-24.12. má Aduš s Honzou dovolenou❣️❣️❣️ Budeme se na Vás opět těšit 27.12. ❣️❣️❣️Všem krásné svátky plné pohody❣️❣️❣️</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Vývar se zeleninou a vepřovým masem</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							33,-
-						</span>
-</p>
-<p>
-<strong>Vepřová líčka na vině s rýží a kořenovou zeleninou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							135,-
-						</span>
-</p>
-<p>
-<strong>Zeleninové rizoto s kuřecím masem, sýrem a okurkou NEBO řepou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							129,-
-						</span>
-</p>
-<p>
-<strong>Teplý bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							35,-
-						</span>
-</p>
-<p>
-<strong>Salátový bufet</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							45,-
-						</span>
-</p>
-</div>
-</td>
-</tr>
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 15.12.2021</div>
+<div class="nadpis">Pátek 17.12.2021</div>
 <ul>
 <li class="poznamka">
-<div class="polozka">Perníkový koláč s čokoládou</div>
+<div class="polozka">Makovec s ořechy a citrónovou polevou</div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
 <div class="cena">49 Kč</div>
 <div class="clear"></div>
 </li>
-<li class="poznamka">
-<div class="polozka">Ořechovo-kokosová bábovka</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Vanilkový věneček</div>
-<div class="cena">59 Kč</div>
-<div class="clear"></div>
-</li>
 <li class="polevka">
-<div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Gulášová polévka samostatně <em title="Obiloviny obsahující lepek">1</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Krém z celeru a pečených jablek, krutony, pažitka- s menu</div>
+<div class="polozka">300ml Gulášová polévka s menu  <em title="Obiloviny obsahující lepek">1</em></div>
 <div class="cena">29 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Řecký biftek, tzatziki, pečené batáty, nakládaná cibule  <em title="Mléko">7</em></div>
-<div class="cena">149 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>250g Pečené kuřecí stehno na medu, mrkvová omáčka s chilli,  rýže, petržel <em title="Mléko">7</em></div>
+<div class="polozka"><span class="poradi">1. </span>150g Krůta na paprice s tarhoňou, bramborová sláma <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>350g Tortilla wrap s halloumi sýrem, fazole, zelenina, rajčatová salsa, trhaný salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="polozka"><span class="poradi">2. </span>300g Zapečený květák s vajíčkem a smetanou, vařený brambor, míchaný salát <em title="Vejce">3</em><em title="Mléko">7</em></div>
 <div class="cena">145 Kč</div>
 <div class="clear"></div>
 </li>
@@ -110,16 +48,10 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kulajda s hříbky a vejcem</td><td class="menuPrice">Vyprodáno</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi  </td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Francouzská cibulačka se sýrem, a krutony</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g Steak z vepřové pečeně se šunkou gratinovaný sýrem, mačkané brambory s cibulkou</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta se šunkou a hráškem, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečený hovězí rostbíf na pepřové redukci, pečené brambory s kmínem, hořčice, cibule, volské oko </td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Lasagne s kuřecím masem, listovým špenátem, bešamelem a sýrem</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka na brokolicovém pyré se sýrem, grilované rajče s bazalkovým pestem, parmazán, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linquine se sušenými rajčaty a cuketou zjemněné smetanou, filírované kuřecí prsa, strouhaný sýr</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pšeničná tortila plněná vepřovou panenkou, zeleninou, ledovým salátem, kukuřicí a mexickým dresinkem, smažené hranolky, tatarka</td><td class="menuPrice">Vyprodáno</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát promíchaný olivovým olejem, hermelín v těstíčku, brusinkové žervé </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</h5><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Smažený sýr, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně na slanině, dušená jasmínová rýže</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Křenová omáčka s uzenou kýtou na roštu, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kuřecí játra s klobásou a pórkem, pečené brambory s kmínem, feferonkový dip</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný masový biftek na roštu, zelené fazolky se slaninou, sázené vejce </td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou na jemné hříbkové omáčce, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřové nudličky po sečuánsku se zeleninou a chilli papričkou, smažené bramborové hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny promíchaný citrónovým dresinkem, kuřecí stripsy, vařené vejce</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -133,7 +65,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Dršťková polévka 1a</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Dušená vepřová líčka na bylinkách a černém pivu s wasabi bramborovým pyré a restovaným pórkem 1ac,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">120g</td><td class="title">Smažený sýr plněný šunkou s hranolky a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">200g</td><td class="title">Grilované kuřecí prso Supreme s glazovanou mrkví a smetanovými brambory 1a,3,7</td><td class="pricem">135 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Italská tomatová se zeleninou a bazalkovým pestem 1a,7,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Rolovaná vepřová pečeně plněná anglickou slaninou a špenátem s mačkanými brambory a okurkovým salátem 1a,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">1/4</td><td class="title">Pečené kuřecí stehno na hříbkách s dušenou rýží 1a,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">100g</td><td class="title">Pečený hermelín v listovém těstě na zeleninovém salátu s brusinkovou majonézou a rozpečenou bagetou 1a,3,7,10,12</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
@@ -141,7 +73,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Smazeny filet z atlantickeho hejka v pivnim testicku s celozrnnou horcici, stouchane brambory s kapustou, salatek z cervene repy, citron {L} 139</li><li>Peceny cerstvy sumec s citronem a kaparovo-koprovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Burrito s krutimi gyros nudlickami, rajcaty a pekingskym zelim, korenena ryze s fazolemi, okurkove tzatziki, salatek {L} 139</li><li>Uzena prsicka z divoke kachny s visnovou omackou, gratinovane brambory, salatek 169</li><li>Pikantni pecene tofu se zeleninou a ananasem ve sladke chilli omacce se zazvorem a prazenym sezamem, jasminova ryze, salatek 139</li></ol>
+<ol><li>Peceny filet z lofotske makrely s citronem a pikantni salsou z pecenych paprik, pecene brambory, salatek 139</li><li>Spagety s kalamary, krevetami, pecenymi paprikami a pestem ze susenych rajcat, citron {L} 175</li><li>Indicke birjany z basmati ryze s hovezimi nudlickami a zeleninou, jogurtovy dip, salatek 139</li><li>Danci burger s rajcetem, pekingskym zelim, chipotle majonezou a goudou, pecene brambory, salatek {L} 169</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny, pak coj a balkanskym syrem {L} 139</li></ol>
 </td>
 </tr>
 </table>
