Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -43,7 +43,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z lofotske makrely s citronem a pikantni salsou z pecenych paprik, pecene brambory, salatek 139</li><li>Spagety s kalamary, krevetami, pecenymi paprikami a pestem ze susenych rajcat, citron {L} 175</li><li>Indicke birjany z basmati ryze s hovezimi nudlickami a zeleninou, jogurtovy dip, salatek 139</li><li>Danci burger s rajcetem, pekingskym zelim, chipotle majonezou a goudou, pecene brambory, salatek {L} 169</li><li>Bramborove gnocchi s ratatouille z pecene zeleniny, pak coj a balkanskym syrem {L} 139</li></ol>
+<ol><li>Peceny filet lofotske makrely s citronem a omackou aiolli, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka a tresky s citronem a omackou aiolli, pecene brambory, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Toskanske teleci ragu na bilem vine se zeleninou, rajcaty a olivami, bramborove gnocchi, salatek {L} 169</li><li>Zapecene zampiony plnene tempehem s rajcaty a zeleninou, pohanka se smazenou cibulkou, jogurtovy dip, salatek 139</li></ol>
 </td>
 </tr>
 </table>
