Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,7 +7,37 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 21.12.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Ořechový košíček s čokoládou  </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Borůvkový koláč</div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém se smetanou- samostatně <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Karotkový krém se smetanou- s menu <em title="Mléko">7</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Zvěřinový guláš, restované gnocchi, bylinková strouhanka, marinovaná cibule <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Dýňové risotto, smetanový sýr, mladý špenát, slunečnicové semínko, cherry rajče <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -46,7 +76,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet lofotske makrely s citronem a omackou aiolli, pecene baby brambory, salatek 139</li><li>Peceny filet z cerstveho morskeho vlka a tresky s citronem a omackou aiolli, pecene brambory, salatek 175</li><li>Kow mo daeng – thajske grilovane veprove ve sladke a vonave marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Toskanske teleci ragu na bilem vine se zeleninou, rajcaty,bazalkou a olivami. Bramborove gnocchi,salatek.  (L)  169</li><li>Zapecene zampiony plnene tempehem s rajcaty a zeleninou, pohanka se smazenou cibulkou, jogurtovy dip, salatek 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, mungo klicky a zelenymi bylinkami 139</li><li>Gravlax z divokeho lososa nerka se sladkokyselym sezamovym dresinkem, ryzove nudle s cerstvou zeleninou, mungo klicky a zelenymi bylinkami 169</li><li>Grilovany kruti kebab tanduri v korenene jogurtove marinade se zazvorem a citronem, zeleninove birjany z basmati ryze, jogurtovy dip, salatek 139</li><li>Grilovane medailonky z panenske svickove s merunkovo-jablecnym catny, gratinovane brambory, salatek z cervene repy 169</li><li>Smazeny kapustovy rizek s goudou, stouchane brambory s creme fraiche, kysela okurka {L} 139</li></ol>
 </td>
 </tr>
 </table>
