--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,43 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 21.12.2021 13:57:50</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 22.12.2021 06:11:24</small><table >
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Úterý 21.12.2021</div>
+<div class="nadpis">Středa 22.12.2021</div>
 <ul>
-<li class="poznamka">
-<div class="polozka">Ořechový košíček s čokoládou  </div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="poznamka">
-<div class="polozka">Borůvkový koláč</div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Karotkový krém se smetanou- samostatně <em title="Mléko">7</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Karotkový krém se smetanou- s menu <em title="Mléko">7</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Zvěřinový guláš, restované gnocchi, bylinková strouhanka, marinovaná cibule <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>300g Dýňové risotto, smetanový sýr, mladý špenát, slunečnicové semínko, cherry rajče <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -48,19 +18,22 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou a sýrem, krutony</td><td class="menuPrice">39,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Frankfurtská s párkem</td><td class="menuPrice">39,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Hlavní jídla</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP:</td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Koprová omáčka s hovězím masem a vařeným vejcem, kynuté houskové knedlíky </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Vepřové výpečky, bramborové knedlíky, špenát</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu , sázené vejce na šunce, smažené bramborové plátky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cmunda po kaplicku (uzené s bílým zelím v bramboráku)  </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený holanský řízek, bramborová kaše s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka,grilovaná karotka, hráškové pyré, vařené vejce</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečená roláda z vepřové kýty plněná šunkovou nádivkou s kukuřicí a kapií, bramborová kaše s máslem a šnitlíkem, kyselá okurka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřový flamendr sypaný čerstvým křenem, smažené bramborové hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený citrónovým dresinkem, nudličky z kuřecích prsou, opečená anglická slanina, parmazán</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">1+1</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Instagram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Vážení hosté, dnes nepřijímáme platební karty. Děkujeme za pochopení</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Kapsa z vepřové kýty plněná šunkou, nivou, vejcem a kapií na roštu, mačkané brambory s cibulkou</td><td class="menuPrice">119,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Buřguláš s červenou cibulí a beraním rohem, rozpečený chléb</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Španělský vepřový ptáček, dušená jasmínová rýže</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zbojnická hovězí pečeně, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Moravský vrabec, bramborové knedlíky, bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené žampióny, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Steak z kuřecích prsou na roštu s vařeným vejcem gratinovaný sýrem, grilovaná zelenina, zakysaná smetana se sušenými tomaty</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny špecle na jemné smetanové omáčce s hříbky, filírovaná kuřecí prsa, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně s červenými mexickými fazolemi, smažené bramborové plátky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát promíchaný olivovým olejem, hermelín v těstíčku, brusinkové žervé </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">2+1</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">84,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</h5><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5></tbody></table></table>
 </td>
 </tr>
 </table>
@@ -68,7 +41,7 @@
 <tr><th>MATTES<br><a href="https://www.mattesrestaurace.cz/">https://www.mattesrestaurace.cz/</a></th></tr>
 <tr>
 <td>
-<table class="dm"><tr><td class="amount"> </td><td class="title">Hovězí vývar se zeleninou, masem a nudlemi 1a,3,9</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">1ks</td><td class="title">Burrito s vepřovým masem, fazolemi, ledovým salátem, rajčaty a majonézou s koriandrem 1a,3,7,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Grilované medailonky z vepřové panenky s pepřovou omáčkou, zelenými fazolkami na anglické slanině s opečenými brambory 1a,7</td><td class="pricem">145 Kč</td><tr><tr><td class="amount">400g</td><td class="title">Špagety Aglio - Olio a peperoncino s rukolou a sýrem Forte Classico 1a,3,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Krkonošské kyselo s vaječnou omeletou 1a,3,7,12</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Znojemská hovězí pečeně s nakládanými okurkami a dušenou rýží 1a,10</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">180g</td><td class="title">Grilované krůtí mleté biftečky s restovanou zeleninou, mačkanými brambory a naší tatarskou omáčkou 1a,3,7,10</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažená treska v bylinkové strouhance na ledovém salátu s rajčaty, citrusovým zákysem a rozpečenou bagetou 1a,3,4,7</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
