Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 23.12.2021 08:35:42</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 23.12.2021 09:13:21</small><table >
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
@@ -40,7 +40,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s pecenymi rajcaty a bazalkovym pestem, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho mecouna s pecenymi rajcaty a bazalkovym pestem, zeleninovy bulgur, salatek z cervene repy {L} 175</li><li>Lasagne s hovezim masem, rajcaty a pecenymi paprikami zapecene ve smetanove omacce s goudou, salatek z cervene repy {L}  139</li><li>Pecena jeleni plec na jalovci, kapusta na bilem vine s creme fraiche a celozrnnou horcici, hrachova kase 169</li><li>Thajske kari s pecenym tofu, bataty, paprikami, kokosovym mlekem a limetkovymi listky, jasminova ryze (pikantni) 139</li></ol>
+<ol><li>Smazeny filet z jihoceskeho kapra {Velka Kaplice}, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 139</li><li>Smazeny filet z cerstve tresky tmave, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 169</li><li>Burrito s restovanymi krutimi gyros nudlickami, frijoles refritos, pekingskym zelim a rajcaty, zeleninovy bulgur, jogurtovy dip, salatek {L} 139</li><li>Smazeny teleci rizek, vanocni bramborovy salat se zeleninou a majonezou, citron {L} 169</li><li>Zapeceny cerny kuba se houbami smazenymi na cibulce, cesnekem a majorankou, nase kysane zeli s mrkvi a krenem {L} 139</li></ol>
 </td>
 </tr>
 </table>
