--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 23.12.2021 13:57:47</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 24.12.2021 06:11:11</small><table >
 <table>
 <tr><th>KUTA<br><a href="https://www.menicka.cz/4728-kuta-restaurace-.html">https://www.menicka.cz/4728-kuta-restaurace-.html</a></th></tr>
 <tr>
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Čtvrtek 23.12.2021</div>
+<div class="nadpis">Pátek 24.12.2021</div>
 <ul>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>Od 23. 12. do 2. 1. bude Kuta restaurace uzavřena. </div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>Děkujeme za přízeň a přejeme krásné svátky vánoční a jen to nejlepší do nového roku. </div>
-<div class="clear"></div>
-</li>
-</ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -24,15 +16,7 @@
 <tr><th>NA LEDARNACH<br><a href="https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka">https://www.senkyrna.cz/senkyrna-na-ledarnach/denni-nabidka</a></th></tr>
 <tr>
 <td>
-<table class="table"><table class="table">
-<tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnekový krém s krutóny</td><td class="menuPrice">39,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">150g  Smažené rybí filé, bramborová kaše s máslem, citrón </td><td class="menuPrice">125,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špikovaná hovězí kýta po znojemsku, dušená jasmínová rýže  </td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové a houskové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu, pečené brambory s kmínem, volské oko</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s másle a šnitlíkem, cibule, hořčice </td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: Do růžova pečená vepřová panenka na zeleninovém leču s vejci, smažené celerové hranolky, rukola </td><td class="menuPrice">155,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné kari omáčce, smažené hranolky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát s trhanými listy ochucený olivovým olejem, filírovaná kuřecí prsa, vařené vejce, opečená slanina</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">0,4l</td><td class="menuName">Staropramen  EXTRA CHMELENÁ 12% - Dej si dva čepované ležáky a domů za věrnost dostaneš 0,5l plechovku, není množstevně omezeno, vypiješ " dvacet kousku "  a dostaneš 10 plechovek</td><td class="menuPrice">42,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svařené červené víno AKCE 1+1 zdarma (dej si najednou dva svařáky a jeden je zdarma)</td><td class="menuPrice">70,-</td></tr><tr><td class="menuWeight">0,2l</td><td class="menuName">Svatomartinské víno Vinařství Šoman (Muller Thurgau, Zweigeltrebe) nebo Tetur (Muškát moravský, Modrý portugal)</td><td class="menuPrice">60,-</td></tr><tr><td class="menuWeight">0,75l</td><td class="menuName">Svatomartinská vína s sebou </td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smetanovo jableční řez s čokoládou a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">wi-fi heslo: www.senkyrna.cz</td><td class="menuPrice"></td></tr><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
+None
 </td>
 </tr>
 </table>
